--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">360 Devs</string>
     <string name="title_activity_main">360 Devs</string>
-    <string name="package_name">com.drizzles.360Devs</string>
-    <string name="custom_url_scheme">com.drizzles.360Devs</string>
+    <string name="package_name">com.nitride.app</string>
+    <string name="custom_url_scheme">com.nitride.app</string>
 </resources>
